[package]
name = "find-me-a-dish"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
clap = "4.5.20"
csv = "1.3.0"
dotenv = "0.15.0"
log = "0.4.22"
serde = { version = "1.0.214", features = ["derive"]}
serenity = "0.12"
serialport = "4.6.0"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
